--- a/BlazorServerApp/_Imports.razor
+++ b/BlazorServerApp/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorServerApp
 @using BlazorServerApp.Shared
+@using BlazorServerApp.Models
 @using BlazorServerApp.Services
