--- a/BlazorServerApp/Pages/GrpcDemo/_GrpcDemo.razor
+++ b/BlazorServerApp/Pages/GrpcDemo/_GrpcDemo.razor
@@ -2,9 +2,9 @@
 @page "/grpcdemo"
 @inject MyGrpcClient client
 
-<PageTitle>gRPC Unary demo</PageTitle>
+<PageTitle>gRPC unary demo</PageTitle>
 
-<h3>gRPC Unary demo</h3>
+<h3>gRPC unary demo</h3>
 
 <button class="btn btn-primary" @onclick=HandleHello>Hello</button>
 <button class="btn btn-primary" @onclick=HandleGetFullName>Get fullname</button>
