--- a/BlazorServerApp/Shared/NavMenu.razor
+++ b/BlazorServerApp/Shared/NavMenu.razor
@@ -26,7 +26,12 @@
     </div>
     <div class="nav-item px-3">
       <NavLink class="nav-link" href="grpcdemo">
-        <span class="oi oi-list-rich" aria-hidden="true"></span> gRPC demo
+        <span class="oi oi-list-rich" aria-hidden="true"></span> gRPC unary demo
+      </NavLink>
+    </div>
+    <div class="nav-item px-3">
+      <NavLink class="nav-link" href="grpcstreamdemo">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> gRPC stream demo
       </NavLink>
     </div>
   </nav>
