--- a/BlazorServerApp/Pages/GrpcStreamDemo/_GrpcStreamDemo.razor
+++ b/BlazorServerApp/Pages/GrpcStreamDemo/_GrpcStreamDemo.razor
@@ -8,6 +8,7 @@
 <h3>gRPC stream demo</h3>
 <button class="btn btn-primary" disabled=@f_loading @onclick=HandleReset>Reset</button>
 <button class="btn btn-primary" disabled=@f_loading @onclick=HandleServerStreamDemo>Server stream</button>
+<button class="btn btn-primary" disabled=@f_loading @onclick=HandleClientStreamDemo>Client stream</button>
 
 <h6>回應訊息</h6>
 <ol>
@@ -36,6 +37,7 @@
     {
       f_loading = true;
 
+
       using var channel = GrpcChannel.ForAddress(gRPCHostAddress);
       var client = new StreamDemo.StreamDemoClient(channel);
       var reply = client.ServerStreamDemo(new Test { Message = "測試" });
@@ -48,6 +50,40 @@
       }
 
       messageList.Add($"Server Streaming Completed.");
+    }
+    finally
+    {
+      f_loading = false;
+    }
+  }
+
+  async Task HandleClientStreamDemo()
+  {
+    try
+    {
+      f_loading = true;
+      Random randomDelay = new();
+
+      using var channel = GrpcChannel.ForAddress(gRPCHostAddress);
+      var client = new StreamDemo.StreamDemoClient(channel);
+      var streamCaller = client.ClientStreamDemo();
+
+      for (int i = 1; i <= 10; i++)
+      {
+        await Task.Delay(randomDelay.Next(1, 2000)); // 稍等一下
+
+        var msg = new Test { Message = $"Message {i}" };
+        await streamCaller.RequestStream.WriteAsync(msg);
+
+        messageList.Add($"送出訊息: {msg.Message}");
+        await InvokeAsync(StateHasChanged);
+      }
+
+      await streamCaller.RequestStream.CompleteAsync(); // 必需通加已上傳完畢。
+      messageList.Add($"Cimpleted Client Streaming.");
+
+      var reply = await streamCaller.ResponseAsync;
+      messageList.Add($"收到回應: {reply.Message}");
     }
     finally
     {
