--- a/BlazorServerApp/Pages/GrpcDemo/_GrpcDemo.razor
+++ b/BlazorServerApp/Pages/GrpcDemo/_GrpcDemo.razor
@@ -20,7 +20,7 @@
 
 @if (errMsg != null)
 {
-  <div class="alert alert-danger" role="alert">
+  <div class="alert alert-danger my-3" role="alert">
     @errMsg
   </div>
 }
