--- a/BlazorServerApp/Shared/NavMenu.razor
+++ b/BlazorServerApp/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
         <span class="oi oi-list-rich" aria-hidden="true"></span> gRPC stream demo
       </NavLink>
     </div>
+    <div class="nav-item px-3">
+      <NavLink class="nav-link" href="login">
+        <span class="oi oi-account-login" aria-hidden="true"></span> 模擬登入
+      </NavLink>
+    </div>
   </nav>
 </div>
 
