--- a/BlazorServerApp/Pages/GrpcStreamDemo/_GrpcStreamDemo.razor
+++ b/BlazorServerApp/Pages/GrpcStreamDemo/_GrpcStreamDemo.razor
@@ -1,7 +1,7 @@
 ﻿@using Grpc.Net.Client
 @using GrpcDemoService
 @page "/grpcstreamdemo"
-@inject MyGrpcClient client
+@inject MyBizService bizSvc
 
 <PageTitle>gRPC stream demo</PageTitle>
 
